# python-package-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yaml  linting.yaml  release.yaml  tests.yaml  typing.yaml
mypackage/: __main__.py  const.py
tests/: conftest.py  const.py  ruff.toml
tests/unit/mymodule/: __init__.py  test_mymodule.py
